# legend_of_zelta

./: .gitignore  CMakeLists.txt  README.md  ideas.txt  legend_of_zelta.cpp  notes.txt  roadmap.md
archive/: README.md_2019-10-15-1501  sqlnotes.txt
archive/mysqltestarchive/: mysql_connection.h
archive/mysqltestarchive/driver/nativeapi/: binding_config.h
archive/ncurses_build/: README.md
archive/ncurses_build/src/: game.cpp  map.cpp  screen.h
archive/prototype_1/: README.md
archive/prototype_1/src/: perlin_noise.cpp  screen.h
archive/prototype_2/src/: engine.h
archive/prototype_3/src/: Entity.cpp  FunctionLib.h  Main.cpp  Projectile.cpp  TileEngine.h  WeaponStats.h
archive/python_demos/hello_world/: hello_world.py
archive/python_demos/modules/: improved_fibonacci.py  main.py  pdspammodule.c  pydoc_fibonacci.py  setup.py  spammodule.c
journal/: 0  1  10.md  11.md  2  3  4.md  5.md  6.md  7.md  8.md  9.md
ncurses_build/: CMakeLists.txt  README.md  README.txt
ncurses_build/src/: character.cpp  character.h  frame.cpp  frame.h  game.cpp  perlin_noise.cpp  perlin_noise.h  screen.cpp  screen.h  space.cpp  space.h  test
prototype_1/src/: character.h  frame.h  game  screen.cpp
prototype_2/: README.md
prototype_2/src/: engine.cpp  main.cpp
prototype_3/: FunctionLib.cpp  README.md
prototype_3/src/: Entity.cpp  Entity.h  FunctionLib.cpp  LevelEntityManager.cpp  LevelEntityManager.h  Main.cpp  PlayerCharacter.cpp  PlayerCharacter.h  Projectile.cpp  Projectile.h  TileEngine.cpp  TileEngine.h  WeaponStats.cpp  test
src/: character.cpp  character.h  frame.cpp  frame.h  game  game.cpp  perlin_noise.h  screen.cpp
src/argv_test/: CMakeLists.txt  README.md  argv_test.cpp
src/hello_world/: hello_world.cpp
src/modules/database_connector/: CMakeLists.txt  README.md  database_connector  database_connector.cpp  fix_dynamic_libraries.sh
src/modules/database_connector/mysql-connector-c++-8.0.18-macos10.14-x86-64bit/: INFO_BIN
src/modules/main_log/: CMakeLists.txt  README.md  main_log  main_log.cpp  testlog.txt
src/spdlog_test/: CMakeLists.txt  out  spdlog_test  spdlog_test.cpp  testlog.txt
src/tests/argv_test/: argv_test
src/tests/hello_world/: CMakeLists.txt
src/tests/mysql_connection_test/: mysql_connection_test  mysql_connection_test.cpp  stored_proc
src/tests/mysql_connection_test/mysql-connector-c++-8.0.18-macos10.14-x86-64bit/lib64/: libcrypto.dylib  libssl.dylib
src/tests/mysqlapi_test/: SQLAPI.h  mysql_test.cpp
src/tests/mysqlapi_test/SQLAPI/: ReadMe.txt
src/tests/mysqlapi_test/SQLAPI/include/: myAPI.h  sybAPI.h
src/tests/mysqlapi_test/SQLAPI/lib/: libsqlapi.dylib  libsqlapiu.dylib
src/tests/mysqlapi_test/SQLAPI/samples/: bugtest.cpp
src/tests/mysqlapi_test/include/: cubeSqlAPI.h  ssNcliAPI.h
src/tests/spdlog_test/: spdlog_test.cpp  testlog.txt
